compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteWhen.kt
// FIR_IDENTICAL
fun test(a: Any) {
    when (a)<!SYNTAX!><!>
}
